# kcf

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  README.prem  graphGen.sh  main_vot.cpp  print-test-results  videoio.cpp  videoio.hpp  vot.hpp
Profilovani/: Profilace.aux  Profilace.out  Profilace.tex  Profilace.toc
src/: CMakeLists.txt  complexmat.cpp  complexmat.cu  complexmat.cuh  complexmat.hpp  cuda_error_check.cuh  cuda_functions.cu  cuda_functions.cuh  cuda_functions.h  debug.cpp  debug.h  dynmem.hpp  fft.cpp  fft.h  fft_cufft.cpp  fft_cufft.h  fft_fftw.cpp  fft_fftw.h  fft_opencv.cpp  fft_opencv.h  kcf.cpp  kcf.h  managed_allocator.h  prem.hpp  scale_vars.hpp  threadctx.hpp
src/cn/: cnfeat.hpp
src/cuda/: CMakeLists.txt  cuda_error_check.cuh
src/piotr_fhog/: fhog.hpp  gradientMex.cpp  sse.hpp
